--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,3 +24,12 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.navbar {
+  display: flex;
+  width: 100%;
+  height: 40px;
+  background-color: #171717;
+  align-items: center;
+  padding: 0 5%;
+}
