--- a/src/components/layout/Navbar/Navbar.module.css
+++ b/src/components/layout/Navbar/Navbar.module.css
@@ -1,8 +1,14 @@
 .navbar {
   display: flex;
-  width: 100%;
-  height: 40px;
-  background-color: #171717;
+  justify-content: center;
   align-items: center;
+  height: 60px;
+  background-color: #171717;
+  color: white;
   padding: 0 5%;
+  margin: 20px auto;         /* Jarak dari atas */
+  width: 90%;
+  max-width: 1200px;
+  border-radius: 10px;       /* Rounded corner */
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); /* Shadow mengambang */
 }
